--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="style.css">
   <script defer src="./script.js"></script>
 
-  <title>To do list</title>
+  <title>Task's</title>
 </head>
 
 <body>
